--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,5 @@ before_script:
   - psql -c 'create database subject_manager_demo_app_test;' -U postgres
 addons:
   postgresql: '9.3'
+  code_climate:
+    repo_token: 57dbd14591f8a4d35ae34a8852ec5a62247ec7f067b0ddc5f5689fe443977884
